# CoreServices-AboutThisSyn

./: CMakeLists.txt  README.md
src/: hardware.cpp  hardware.h  main.cpp  mainwindow.cpp  mainwindow.h
